--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,52 @@
 
-<main class="main bg-gray-600">
+<main class="bg-gray-600">
   <div class="h-screen flex items-center justify-center">
-    <div class="w-6/12 p-4 text-center bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
-      <h5 class="mb-2 text-3xl font-bold text-gray-900 dark:text-white">Random Class Selector!</h5>
+    <div class="w-6/12 p-4 text-center border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+
+      <h5 class="mb-2 text-2xl font-bold text-gray-900 dark:text-white">Random Class Selector!</h5>
       <p class="mb-5 text-base text-gray-500 sm:text-lg dark:text-gray-400">Click the button below to select a random class, spec, hero talents, and race!</p>
-      <div class="items-center justify-center space-y-4 sm:flex sm:space-y-0 sm:space-x-4 rtl:space-x-reverse">
+
+      <div class="items-center justify-center">
         <button (click)="getRandomSelection()" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Tell me what to play!</button>
       </div>
-      
+
+
+      <!-- Response -->
       <div class="flex flex-col items-center pt-10 pb-10" *ngIf="isShown">
 
         <!-- Race -->
-        <div class="transition delay-150 flex flex-col w-9/12 p-2 mb-5 lg:p-5 lg:mb-10 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
-          <img class="rounded-t-lg h-12 lg:h-24 lg:w-24" src="{{ randomRace.icon }}" onerror="this.style.display='none'">
+        <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
+          <img class="rounded-t-lg h-12 lg:h-20 lg:w-20" src="{{ randomRace.icon }}" onerror="this.style.display='none'">
 
-          <div class="flex flex-col justify-between p-4 leading-normal">
-              <h5 class="mb-2 text-lg lg:text-4xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomRace.name }}</h5>
+          <div class="flex flex-col p-1 lg:p-4">
+              <h5 class="text-lg lg:text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomRace.name }}</h5>
           </div>
         </div>
 
         <!-- Class -->
-        <div class="transition delay-150 flex flex-col w-9/12 p-2 mb-5 lg:p-5 lg:mb-10 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
-          <img class="rounded-t-lg h-12 lg:h-24 lg:w-24" src="{{ randomClass.icon }}" onerror="this.style.display='none'">
+        <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
+          <img class="rounded-t-lg h-12 lg:h-20 lg:w-20" src="{{ randomClass.icon }}" onerror="this.style.display='none'">
 
-          <div class="flex flex-col justify-between p-4 leading-normal">
-              <h5 class="mb-2 text-lg lg:text-4xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomClass.name }}</h5>
+          <div class="flex flex-col p-1 lg:p-4">
+              <h5 class="text-lg lg:text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomClass.name }}</h5>
           </div>
         </div>
 
         <!-- Spec -->
-        <div class="transition delay-150 flex flex-col w-9/12 p-2 mb-5 lg:p-5 lg:mb-10 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
-          <img class="rounded-t-lg h-12 lg:h-24 lg:w-24" src="{{ randomSpec.icon }}" onerror="this.style.display='none'">
+        <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
+          <img class="rounded-t-lg h-12 lg:h-20 lg:w-20" src="{{ randomSpec.icon }}" onerror="this.style.display='none'">
 
-          <div class="flex flex-col justify-between p-4 leading-normal">
-              <h5 class="mb-2 text-lg lg:text-4xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomSpec.name }}</h5>
+          <div class="flex flex-col p-1 lg:p-4">
+              <h5 class="text-lg lg:text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomSpec.name }}</h5>
           </div>
         </div>
 
         <!-- Hero -->
-        <div class="transition delay-150 flex flex-col w-9/12 p-2 mb-5 lg:p-5 lg:mb-10 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
-          <img class="rounded-t-lg h-12 lg:h-24 lg:w-24" src="assets/war-within-logo.png" onerror="this.style.display='none'">
+        <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
+          <img class="rounded-t-lg h-12 lg:h-20 lg:w-20" src="assets/war-within-logo.png" onerror="this.style.display='none'">
 
-          <div class="flex flex-col justify-between p-4 leading-normal">
-              <h5 class="mb-2 text-lg lg:text-4xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomHero }}</h5>
+          <div class="flex flex-col p-1 lg:p-4">
+              <h5 class="text-lg lg:text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomHero }}</h5>
           </div>
         </div>
       </div>
