--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <main class="bg-gray-600">
-  <div class="h-screen flex items-center justify-center">
-    <div class="w-6/12 p-4 text-center border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+  <div class="min-h-screen flex items-center justify-center">
+    <div class="w-6/12 p-4 m-2 text-center border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
 
       <h5 class="mb-2 text-2xl font-bold text-gray-900 dark:text-white">Random Class Selector!</h5>
       <p class="mb-5 text-base text-gray-500 sm:text-lg dark:text-gray-400">Click the button below to select a random class, spec, hero talents, and race!</p>
@@ -12,7 +12,7 @@
 
 
       <!-- Response -->
-      <div class="flex flex-col items-center pt-10 pb-10" *ngIf="isShown">
+      <div class="flex flex-col items-center pt-10" *ngIf="isShown">
 
         <!-- Race -->
         <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
