--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,43 +10,83 @@
         <button (click)="getRandomSelection()" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Tell me what to play!</button>
       </div>
 
-
       <!-- Response -->
-      <div class="flex flex-col items-center pt-10" *ngIf="isShown">
+      <div class="flex flex-col items-center pt-10" *ngIf="isResponseShown">
 
         <!-- Race -->
-        <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
+        <div class="text-center my-5" *ngIf="isRaceLoadShown">
+          <div role="status">
+            <svg aria-hidden="true" class="inline w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+              <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+            </svg>
+            <span class="pl-2 text-gray-500 dark:text-gray-400">Picking a race...</span>
+          </div>
+        </div>
+
+        <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700" *ngIf="isRaceShown">
           <img class="rounded-t-lg h-12 lg:h-20 lg:w-20" src="{{ randomRace.icon }}" onerror="this.style.display='none'">
 
           <div class="flex flex-col p-1 lg:p-4">
-              <h5 class="text-lg lg:text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomRace.name }}</h5>
+              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomRace.name }}</h5>
           </div>
         </div>
 
         <!-- Class -->
-        <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
+        <div class="text-center my-5" *ngIf="isClassLoadShown">
+          <div role="status">
+            <svg aria-hidden="true" class="inline w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+              <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+            </svg>
+            <span class="pl-2 text-gray-500 dark:text-gray-400">Choosing your class...</span>
+          </div>
+        </div>
+
+        
+        <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700"*ngIf="isClassShown">
           <img class="rounded-t-lg h-12 lg:h-20 lg:w-20" src="{{ randomClass.icon }}" onerror="this.style.display='none'">
 
           <div class="flex flex-col p-1 lg:p-4">
-              <h5 class="text-lg lg:text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomClass.name }}</h5>
+              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomClass.name }}</h5>
           </div>
         </div>
 
         <!-- Spec -->
-        <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
+        <div class="text-center my-5" *ngIf="isSpecLoadShown">
+          <div role="status">
+            <svg aria-hidden="true" class="inline w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+              <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+            </svg>
+            <span class="pl-2 text-gray-500 dark:text-gray-400">Determining a spec...</span>
+          </div>
+        </div>
+        
+        <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700" *ngIf="isSpecShown">
           <img class="rounded-t-lg h-12 lg:h-20 lg:w-20" src="{{ randomSpec.icon }}" onerror="this.style.display='none'">
 
           <div class="flex flex-col p-1 lg:p-4">
-              <h5 class="text-lg lg:text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomSpec.name }}</h5>
+              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomSpec.name }}</h5>
           </div>
         </div>
 
         <!-- Hero -->
-        <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700">
+        <div class="text-center my-5" *ngIf="isHeroLoadShown">
+          <div role="status">
+            <svg aria-hidden="true" class="inline w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+              <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+            </svg>
+            <span class="pl-2 text-gray-500 dark:text-gray-400">Let's be a hero...</span>
+          </div>
+        </div>
+
+        <div class="flex flex-col w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700" *ngIf="isHeroShown">
           <img class="rounded-t-lg h-12 lg:h-20 lg:w-20" src="assets/war-within-logo.png" onerror="this.style.display='none'">
 
           <div class="flex flex-col p-1 lg:p-4">
-              <h5 class="text-lg lg:text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomHero }}</h5>
+              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomHero }}</h5>
           </div>
         </div>
       </div>
