Better spec icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,90 +1,91 @@
 
 <main class="bg-gray-600">
   <div class="min-h-screen flex items-center justify-center">
-    <div class="w-6/12 p-4 m-2 text-center border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+    <div class="w-10/12 lg:w-6/12 p-4 m-2 text-center border border-gray-700 rounded-lg shadow sm:p-8 bg-gray-800">
 
-      <h5 class="mb-2 text-2xl font-bold text-gray-900 dark:text-white">Random Class Selector!</h5>
-      <p class="mb-5 text-base text-gray-500 sm:text-lg dark:text-gray-400">Click the button below to select a random class, spec, hero talents, and race!</p>
+      <h5 class="mb-2 text-xl font-bold text-gray-300">World of Warcraft</h5>
+      <h5 class="mb-2 text-2xl font-bold text-gray-300">Random Class Selector!</h5>
+      <p class="mb-5 text-base text-gray-400 sm:text-lg">Click the button below to select a random class, spec, hero talents, and race!</p>
 
       <div class="items-center justify-center">
-        <button (click)="getRandomSelection()" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Tell me what to play!</button>
+        <button (click)="getRandomSelection()" class="text-white bg-blue-600 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Tell me what to play!</button>
       </div>
 
       <!-- Response -->
       <div class="flex flex-col items-center pt-10" *ngIf="isResponseShown">
         
         <!-- Race -->
-        <div class="flex flex-col lg:min-h-28 w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700" [ngClass]="{ 'animate-pulse': !isRaceLoaded}" >
-          <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-900 dark:text-white" *ngIf="isRaceLoading">
+        <div class="flex flex-col border-gray-700 bg-gray-900 hover:bg-gray-700 min-h-14 lg:min-h-28 w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center rounded-lg md:flex-row md:max-w-xl" [ngClass]="{ 'animate-pulse': !isRaceLoaded}" >
+          <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-300" *ngIf="isRaceLoading">
               <div role="status" class="text-center my-5">
-                <svg aria-hidden="true" class="inline w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" class="inline w-8 h-8 animate-spin text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
                   <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
                 </svg>
-                <span class="pl-2 text-gray-500 dark:text-gray-400">Picking a race...</span>
+                <span class="pl-2 text-gray-400">Picking a race...</span>
               </div>
           </h5>
           
-          <img class="rounded-t-lg h-12 lg:h-20 lg:w-20" src="{{ randomRace.icon }}" onerror="this.style.display='none'" *ngIf="isRaceLoaded">
+          <img class="h-12 lg:h-20 lg:w-20" src="{{ randomRace.icon }}" onerror="this.style.display='none'" *ngIf="isRaceLoaded">
 
           <div class="flex flex-col p-1 lg:p-4" *ngIf="isRaceLoaded">
-              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomRace.name }}</h5>
+              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-300">{{ randomRace.name }}</h5>
           </div>
         </div>
 
         <!-- Class -->
-        <div class="flex flex-col lg:min-h-28 w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700" [ngClass]="{ 'animate-pulse': !isClassLoaded}" >
-          <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-900 dark:text-white" *ngIf="isClassLoading">
+        <div class="flex flex-col border-gray-700 bg-gray-900 hover:bg-gray-700 min-h-14 lg:min-h-28 w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center rounded-lg md:flex-row md:max-w-xl" [ngClass]="{ 'animate-pulse': !isClassLoaded}" >
+          <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-300" *ngIf="isClassLoading">
               <div role="status" class="text-center my-5">
-                <svg aria-hidden="true" class="inline w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" class="inline w-8 h-8 animate-spin text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
                   <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
                 </svg>
-                <span class="pl-2 text-gray-500 dark:text-gray-400">Choosing your class...</span>
+                <span class="pl-2 text-gray-400">Choosing your class...</span>
               </div>
           </h5>
 
-          <img class="rounded-t-lg h-12 lg:h-20 lg:w-20" src="{{ randomClass.icon }}" onerror="this.style.display='none'" *ngIf="isClassLoaded">
+          <img class="h-12 lg:h-20 lg:w-20" src="{{ randomClass.icon }}" onerror="this.style.display='none'" *ngIf="isClassLoaded">
 
           <div class="flex flex-col p-1 lg:p-4" *ngIf="isClassLoaded">
-              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomClass.name }}</h5>
+              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-300">{{ randomClass.name }}</h5>
           </div>
         </div>
 
         <!-- Spec -->
-        <div class="flex flex-col lg:min-h-28 w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700" [ngClass]="{ 'animate-pulse': !isSpecLoaded}" >
-          <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-900 dark:text-white" *ngIf="isSpecLoading">
+        <div class="flex flex-col border-gray-700 bg-gray-900 hover:bg-gray-700 min-h-14 lg:min-h-28 w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center rounded-lg md:flex-row md:max-w-xl" [ngClass]="{ 'animate-pulse': !isSpecLoaded}" >
+          <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-300" *ngIf="isSpecLoading">
               <div role="status" class="text-center my-5">
-                <svg aria-hidden="true" class="inline w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" class="inline w-8 h-8 animate-spin text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
                   <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
                 </svg>
-                <span class="pl-2 text-gray-500 dark:text-gray-400">Determining a spec...</span>
+                <span class="pl-2 text-gray-400">Determining a spec...</span>
               </div>
           </h5>
 
-          <img class="rounded-t-lg h-12 lg:h-20 lg:w-20" src="{{ randomSpec.icon }}" onerror="this.style.display='none'" *ngIf="isSpecLoaded">
+          <img class="rounded-full h-12 lg:h-20 lg:w-20" src="{{ randomSpec.icon }}" onerror="this.style.display='none'" *ngIf="isSpecLoaded">
 
           <div class="flex flex-col p-1 lg:p-4" *ngIf="isSpecLoaded">
-              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomSpec.name }}</h5>
+              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-300">{{ randomSpec.name }}</h5>
           </div>
         </div>
 
         <!-- Hero -->
-        <div class="flex flex-col lg:min-h-28 w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center bg-white rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-900 dark:hover:bg-gray-700" [ngClass]="{ 'animate-pulse': !isHeroLoaded}" >
-          <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-900 dark:text-white" *ngIf="isHeroLoading">
+        <div class="flex flex-col border-gray-700 bg-gray-900 hover:bg-gray-700 min-h-14 lg:min-h-28 w-9/12 p-2 mb-5 lg:p-4 lg:mb-8 items-center rounded-lg md:flex-row md:max-w-xl" [ngClass]="{ 'animate-pulse': !isHeroLoaded}" >
+          <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-300" *ngIf="isHeroLoading">
               <div role="status" class="text-center my-5">
-                <svg aria-hidden="true" class="inline w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg aria-hidden="true" class="inline w-8 h-8 animate-spin text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
                   <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
                 </svg>
-                <span class="pl-2 text-gray-500 dark:text-gray-400">Let's be a hero...</span>
+                <span class="pl-2 text-gray-400">Let's be a hero...</span>
               </div>
           </h5>
-          <img class="rounded-t-lg h-12 lg:h-20 lg:w-20" src="assets/war-within-logo.png" onerror="this.style.display='none'" *ngIf="isHeroLoaded">
+          <img class="h-12 lg:h-20 lg:w-20" src="assets/war-within-logo.png" onerror="this.style.display='none'" *ngIf="isHeroLoaded">
 
           <div class="flex flex-col p-1 lg:p-4" *ngIf="isHeroLoaded">
-              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-900 dark:text-white">{{ randomHero }}</h5>
+              <h5 class="text-lg lg:text-3xl font-bold tracking-tight text-gray-300">{{ randomHero }}</h5>
           </div>
         </div>
       </div>
